# vidya-python-backend-teste

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/routes/: analytics.py  sales.py  search.py
app/core/: config.py
app/db/: mongo.py  sqlite.py
app/models/: sale.py
app/schemas/: sale.py  text.py
app/services/: analytics_service.py  sales_service.py  text_service.py
data/: sales.db
