[project]
name = "vidya-test"
version = "0.1.0"
description = "API FastAPI para ingestao, armazenamento e consulta de dados de vendas"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.7",
    "pydantic-settings>=2.12.0",
    "pymongo>=4.16.0",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
